[gd_scene load_steps=4 format=2]

[ext_resource path="res://level/levels/CameraLimitTrigger.gd" type="Script" id=1]
[ext_resource path="res://core/camera/CameraLimitPositions.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 304, 272 )

[node name="CameraLimitTrigger" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource( 1 )

[node name="ColliderTrigger" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="CameraLimitPositions" type="Node2D" parent="."]
script = ExtResource( 2 )
line_color = Color( 0.611765, 1, 0.639216, 1 )
line_width = 10.0

[node name="TopLeft" type="Position2D" parent="CameraLimitPositions"]
position = Vector2( -1347.69, -759.467 )

[node name="BottomRight" type="Position2D" parent="CameraLimitPositions"]
position = Vector2( 1324.22, 745.814 )
[connection signal="area_entered" from="." to="." method="_on_CameraLimitTrigger_area_entered"]
